# gut-loader

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.linux-build  Makefile  README.md
.omc/: project-memory.json
.omc/state/sessions/5a87992b-0904-4e04-a246-3fcaeabcd968/: session-started.json
.qoder/rules/: doc.md
docs/: BUILD.md  IMPLEMENTATION.md  PRD.md  benchmark_report.md  changelog.md
example_data/: employee.20260421.000000.0000.flg  order.20260421.000000.0000.flg  product.20260421.000000.0000.flg  transaction.20260421.000000.0000.flg  user.20260421.000000.0000.flg
example_data/benchmark_data/500k/: benchmark_employee.20260526.000000.0000.flg
example_data/benchmark_data/50k/: benchmark_employee.20260526.000000.0000.flg
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DatabaseConfig.tsx  FileSelector.tsx  LLMConfig.tsx  LoadingProgress.tsx  PreCheckPanel.tsx  ReportView.tsx
frontend/src/components/ui/: button.tsx  dialog.tsx  select.tsx
frontend/src/hooks/: useLoadingEvents.ts  useTauriCommands.ts
frontend/src/lib/: types.ts
frontend/src/pages/: HomePage.tsx
frontend/src/stores/: appStore.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: gut_benchmark.rs
src-tauri/bundled-drivers/: README.md  odbcinst.ini
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  log_buffer.rs  main.rs  models.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: dm.rs  mod.rs  mysql.rs  oracle.rs  postgres.rs
src-tauri/src/llm/: mod.rs  parser.rs
src-tauri/src/loader/: batch.rs  mod.rs
src-tauri/src/parser/: dat.rs  flg.rs  mod.rs
src-tauri/src/report/: mod.rs
src-tauri/src/validator/: disk.rs  file.rs  mod.rs
src-tauri/tests/: integration_test.rs
