[package]
name = "gut-loader"
version = "1.9.0"
edition = "2021"
default-run = "gut-loader"

[lib]
name = "gut_loader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
flate2 = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "mysql",
    "postgres",
] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
uuid = { version = "1", features = ["v4"] }
oracle-rs = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_Storage_FileSystem"] }

[features]
default = []
# 开发工具，仅在手动 cargo build --features dev-tools 时编译
dev-tools = []

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
odbc-api = "8"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[[bench]]
name = "gut_benchmark"
harness = false

[[bin]]
name = "gut-loader"
path = "src/main.rs"

[[bin]]
name = "generate_test_data"
path = "src/bin/generate_test_data.rs"
required-features = ["dev-tools"]

[[bin]]
name = "run_benchmark"
path = "src/bin/run_benchmark.rs"
required-features = ["dev-tools"]
